--- a/Client-Supplier-main/src/Components/product/product.component.html
+++ b/Client-Supplier-main/src/Components/product/product.component.html
@@ -26,6 +26,8 @@
     </div>
     <a (click)="Delete(product.inventoryId)" class="btn btn-danger bold-btn">Delete</a>
     <a (click)="Update()" class="m-1 btn btn-info bold-btn">Update</a>
+    <a (click)="Delete(product.inventoryId)" class="btn btn-danger bold-btn">Delete With Variation</a>
+    <a (click)="Update()" class="m-1 btn btn-info bold-btn">Update With Variation</a>
     
 
   </div>
