--- a/Client-Supplier-main/src/Components/Dashboard/Dashboard.component.html
+++ b/Client-Supplier-main/src/Components/Dashboard/Dashboard.component.html
@@ -1,68 +1,42 @@
-<mat-grid-list cols="1" rowHeight="1:1">
-  <mat-grid-tile>
-    <div class="container-fluid">
-      
-        <div class="row">
-          
-          <div class="col-xl-3 col-sm-6 col-12 mb-4">
-            <div class="card">
-              <div class="card-body">
-                <div class="d-flex justify-content-between px-md-1">
-                  <div>
-                    <h3 class="text-success">156$</h3>
-                    <p class="mb-0">Revenue</p>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-nowrap">Since last month</span>
-                </p>
-              </div>
-            </div>
-
-            
-          </div>
-
-          <div class="col-xl-3 col-sm-6 col-12 mb-4">
-            <div class="card">
-              <div class="card-body">
-                <div class="d-flex justify-content-between px-md-1">
-                  <div>
-                    <h3 class="text-warning">156$</h3>
-                    <p class="mb-0">Revenue</p>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-nowrap">Since last Week</span>
-                </p>
-              </div>
-            </div>
-
-            
-          </div>
-
-          <div class="col-xl-3 col-sm-6 col-12 mb-4">
-            <div class="card">
-              <div class="card-body">
-                <div class="d-flex justify-content-between px-md-1">
-                  <div>
-                    <h3 class="text-primary">156$</h3>
-                    <p class="mb-0">Revenue</p>
-                  </div>
-                </div>
-                <p class="mt-3 mb-0 text-muted text-sm">
-                  <span class="text-nowrap">Since last Yesterday</span>
-                </p>
-              </div>
-            </div>
-
-            
-          </div>
-
-        </div>
-
+<div class="d-flex flex-column align-items-center" style="height: 100vh">
+  
+    <h1 class="badge rounded-pill bg-success m-2">Total Revenue: {{totalRevenue}} EGP</h1>
+      <table mat-table [dataSource]="productList" multiTemplateDataRows class="mat-elevation-z8 m-2">
+        <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
+          <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+          <td mat-cell *matCellDef="let element">{{element[column]}}<span *ngIf="column == 'name'">{{element.product.name}}</span> </td>
+        </ng-container>
         
-      
-    </div>
-
-  </mat-grid-tile>
-</mat-grid-list>
+        <ng-container matColumnDef="expand">
+          <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
+          <td mat-cell *matCellDef="let element">
+            <button mat-icon-button aria-label="expand row"
+              (click)="(expandedElement = expandedElement === element ? null : element); $event.stopPropagation()">
+              <mat-icon *ngIf="expandedElement !== element">keyboard_arrow_down</mat-icon>
+              <mat-icon *ngIf="expandedElement === element">keyboard_arrow_up</mat-icon>
+            </button>
+          </td>
+        </ng-container>
+  
+        <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+        <ng-container matColumnDef="expandedDetail">
+          <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplayWithExpand.length">
+            <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+              <div class="example-element-diagram">
+                <img style="width: 100px;" [src]="element.medias[0]" alt="" srcset="">
+              </div>
+              <div class="example-element-description">
+                {{element.product.description}}
+              </div>
+            </div>
+          </td>
+        </ng-container>
+  
+        <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;" class="example-element-row"
+          [class.example-expanded-row]="expandedElement === element"
+          (click)="expandedElement = expandedElement === element ? null : element">
+        </tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+      </table>
+</div>
