--- a/Client-Supplier-main/src/Components/header/header.component.html
+++ b/Client-Supplier-main/src/Components/header/header.component.html
@@ -10,7 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item ">
-          <a class="nav-link" aria-current="page" routerLink="/Home">Home</a>
+          <button class="btn" aria-current="page"  [hidden]="!isLogged" (click)="goToProducts()">Products</button>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link" aria-current="page"  [hidden]="!isLogged" routerLink="/Dashboard">Orders</a>
         </li>
         <li class="nav-item ">
           <a class="nav-link" aria-current="page" routerLink="/Register" [hidden]="isLogged">Register</a>
@@ -25,7 +28,7 @@
           <button class="btn" type="button" (click)="Logout()" [hidden]="!isLogged">Logout</button>
         </li>
         <li class="nav-item ">
-          <a class="btn" routerLink="/Add" role="button">Add Product</a>
+          <a class="btn" routerLink="/Add" [hidden]="!isLogged" role="button">Add Product</a>
         </li>
       </ul>
     </div>
