--- a/Client-Supplier-main/src/Components/product/product.component.css
+++ b/Client-Supplier-main/src/Components/product/product.component.css
@@ -122,7 +122,7 @@
     -webkit-backdrop-filter: blur(0.0px);
     border-radius: 10px;
 }
-.bold-btn {
+/* .bold-btn {
 
     font-size: 1rem;
     font-weight: 500;
@@ -131,7 +131,7 @@
 }
 .box .btn {
     font-size: 1.5rem;
-}
+} */
 
 @media (max-width: 1025px) {
     .btn {
